# bcos-group-manager

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
bcos-group-manager/: CMakeLists.txt  GroupManagerFactory.cpp  GroupManagerFactory.h  GroupManagerImpl.cpp  GroupManagerImpl.h
bcos-group-manager/config/: ConfigParser.cpp  ConfigParser.h  GroupMgrConfig.h
bcos-group-manager/controller/: Common.h  NodeControllerInterface.h  TarsNodeController.cpp  TarsNodeController.h
bcos-group-manager/storage/: Common.h  GroupInfoStorage.cpp  GroupInfoStorage.h  RemoteStorage.cpp  RemoteStorage.h
cmake/: InstallInclude.cmake  config.cmake
tests/: CMakeLists.txt
tests/unittests/: EmptyTest.cpp
